<resources>
    <string name="app_name">Remoboard</string>
    <string name="switch_ime">Switch Keyboard</string>
    <string name="switch_ime_text">Switch</string>
    <string name="setting_key_text">Setting</string>
    <string name="reset_key_text">Reset</string>
    <string name="help_key_text">Help</string>
    <string name="return_key_text">Return</string>
    <string name="title_general">General</string>
    <string name="title_howtouse">How To Use Remoboard</string>
    <string name="title_whatislab">What is Lab</string>
    <string name="title_downloaddesktop">Download Desktop App</string>
    <string name="title_quickconfig">Quick Config</string>
    <string name="title_labconfig">Lab Config</string>
    <string name="title_enablekeyboard">Enable Keyboard</string>
    <string name="title_switchkeyboard">Switch Keyboard</string>
    <string name="title_connectionmode">Connection Mode</string>
    <string name="title_chooseconnectionmode">Choose connection mode :</string>
    <string name="title_feedback">Feedback</string>
    <string name="title_email">E-mail</string>
    <string name="title_weibo">Weibo</string>
    <string name="title_wechat">Wechat Subscription</string>
    <string name="title_telegram">Telegram</string>
    <string name="title_more">More</string>
    <string name="title_appversion">App Version</string>
    <string name="title_language">Language</string>
    <string name="title_lab">Lab</string>
    <string name="title_chooselanguage">Choose Language</string>
    <string name="title_qqgroup">QQ Group</string>
    <string name="input_here">Input Here</string>
    <string name="title_testinput">Test Input</string>
    <string name="switch_keyboard">Switch Keyboard</string>
    <string name="enable_keyboard">Enable Keyboard</string>
    <string name="wifi_wifinotconnected">Wi-Fi not connected</string>
    <string name="wifi_connectioncode">Connection Code</string>
    <string name="wifi_waitingforconnection">Waiting for connection</string>
    <string name="wifi_ipaddress">IP Address</string>
    <string name="ble_messageaccesspoint">Bluetooth Access Point</string>
    <string name="msg_connected">Connected</string>
    <string name="msg_disconnected">Disconnected</string>
    <string name="msg_wifi_not_enabled">Wi-Fi not enabled, please enable Wi-Fi and tap Reset below</string>
    <string name="msg_wifi_not_connected">Wi-Fi not connected, please connect Wi-Fi and tap Reset below</string>
    <string name="title_connectbyhttp">Web</string>
    <string name="title_connectbybluetooth">Bluetooth</string>
    <string name="title_connectbyip">IP (Deprecated Soon)</string>
    <string name="waiting">Waiting</string>
</resources>
