<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:background="@color/colorWhite"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="vertical"
        >

        <TextView
            android:id="@+id/textview_message"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:gravity="center"
            android:text="@string/waiting"
            />


    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="2dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="40dp">
        <Button
            android:id="@+id/button_switch"
            android:text="@string/switch_ime_text"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/button_reset"
            android:layout_marginLeft="2dp"
            android:text="@string/reset_key_text"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"/>
        <Button
            android:id="@+id/button_help"
            android:layout_marginLeft="2dp"
            android:text="@string/help_key_text"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"/>
        <Button
            android:id="@+id/button_return"
            android:layout_marginLeft="2dp"
            android:text="@string/return_key_text"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"/>

    </LinearLayout>

</LinearLayout>
