<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.everettjf.remotekb.TestInputActivity"
    android:orientation="vertical"
    >

    <Button
        android:id="@+id/buttonEnable"
        android:text="@string/enable_keyboard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />
    <Button
        android:id="@+id/buttonSwitch"
        android:text="@string/switch_keyboard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />

    <EditText
        android:id="@+id/editText"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:lines="8"
        android:maxLines="20"
        android:scrollbars="vertical"
        android:gravity="top"
        android:text="@string/input_here"
        android:inputType="textMultiLine" />

</LinearLayout>
